# pixel-perfect

./: .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  README.md  SPEC.md  UI_README.md  main.py  packages.txt  pyproject.toml  pytest.ini  run_ui.py  streamlit_app.py  transform.py
.claude/: settings.local.json
.claude/tasks/: OVERVIEW.md
.claude/tasks/complete/: task-003-test-infrastructure.md  task-005-row-operations.md  task-009-aspect-ratio-operations.md  task-010-channel-operations.md  task-011-pattern-operations.md  task-013-cli-interface-removed.md  task-013-cli-interface.md  task-016-streamlit-foundation.md  task-017-operation-selector.md  task-018-parameter-configuration.md  task-019-realtime-execution.md  task-020-image-display-comparison.md  task-024-fix-preview-updates.md  task-025-fix-duplicate-operations.md  task-026-remove-difficulty-indicators.md  task-027-essential-tooltips.md  task-028-pipeline-save-load.md  task-029-preset-pipeline-integration.md  task-030-variable-standardization.md  task-031-enhanced-error-handling.md
.claude/tasks/todo/: task-002-basic-project-structure.md  task-004-pixel-operations.md  task-006-column-operations.md  task-007-block-operations.md  task-008-geometric-operations.md  task-012-enhanced-caching.md  task-014-integration-tests.md  task-015-performance-optimization.md  task-016-streamlit-foundation.md  task-021-export-sharing.md  task-022-fix-tests-and-errors.md  task-022-streamlit-deployment.md  task-023-operations-review-and-fix.md  task-024-fix-preview-updates.md  task-025-fix-duplicate-operations.md  task-026-remove-difficulty-indicators.md  task-027-essential-tooltips.md  task-032-visual-design-cleanup.md  task-033-advanced-preview-system.md
.claude/tasks/wip/: task-002-utility-functions.md
.streamlit/: config.toml
src/: __init__.py  conftest.py  exceptions.py  main.py  test_basic.py  transform.py
src/cli/: __init__.py  commands.py  config.py  interactive.py  main.py
src/core/: __init__.py  base.py  context.py  pipeline.py  test_context.py  test_pipeline.py
src/operations/: __init__.py  _constants.py  aspect.py  base_test.py  block.py  channel.py  column.py  geometric.py  pattern.py  pixel.py  row.py  test_block.py  test_column.py  test_geometric.py  test_pixel.py  test_row.py
src/presets/: __init__.py  built_in.py
src/ui/: __init__.py  design_system.py  streamlit_app.py
src/ui/components/: __init__.py  enhanced_step_visualizer.py  export_manager.py  grid_viewer.py  image_comparison.py  image_display.py  image_inspector.py  image_viewer.py  layout.py  operation_browser.py  operation_registry.py  parameter_forms.py  pipeline_executor.py  pipeline_manager.py  preset_browser.py  session.py
src/ui/utils/: __init__.py  config_serialization.py  error_translator.py  execution_cache.py  form_generators.py  image_export.py  image_utils.py  pipeline_serialization.py
src/utils/: __init__.py  cache.py  cache_debug.py  cache_manager.py  image.py  synthetic_images.py  test_images.py  test_utils.py  validation.py
tests/: __init__.py  conftest.py  test_context.py  test_pipeline.py  test_utils.py  utils.py
tests/fixtures/expected_outputs/: reference_metadata.json
tests/integration/: __init__.py  test_edge_cases.py  test_operation_combos.py  test_performance.py  test_pipelines.py  test_simple.py  test_visual_regression.py
tests/operations/: __init__.py  base_test.py
