[project]
name = "pixel-perfect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.3",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]  # Tell ruff your code is in src/

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]

ignore = [
    "E501",  # line too long (formatter handles this)
    "B008",  # do not perform function calls in argument defaults
]

exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.ruff.per-file-ignores]
"test_*.py" = ["S101"]
"**/tests/*" = ["S101"]
"src/pipeline/operations/*.py" = ["S101"]  # Allow asserts in operation test classes

[tool.ruff.isort]
combine-as-imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["src/pipeline", "tests"]
pythonpath = ["src"]  # Important for src layout
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-v --tb=short"

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"  # or "strict" if you want stricter checking
include = ["src"]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
]

# Specific settings
reportMissingImports = true
reportMissingTypeStubs = false  # Don't complain about missing stubs for third-party libs
reportUnknownMemberType = false  # PIL/Pillow has poor type hints
reportUnknownArgumentType = false  # Same for numpy
reportUnknownVariableType = false
reportPrivateUsage = true
reportUnnecessaryTypeIgnoreComment = true
reportImplicitStringConcatenation = true

# For your image processing project specifically
reportIncompatibleMethodOverride = true  # Important for BaseOperation subclasses
reportUninitializedInstanceVariable = true
